# esp32p4-ov9281-zxing

./: .gitignore  CMakeLists.txt  README.md  bootloader.dump  esp32-uart-log.txt  partitions.csv  sdkconfig.defaults
components/zxing/: CMakeLists.txt  zxing.cpp
components/zxing/include/: Generator.h  ReadBarcode.cpp  zxing.h
components/zxing/include/libzueci/: zueci.c
main/: CMakeLists.txt  app_video.c  idf_component.yml  main.c
